# clickhouse-sql-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: errors.rs  parse.rs
src/: column.rs  create.rs  keywords.rs  lib.rs  table.rs
tests/: lib.rs  tables.sql  tables2.sql
